create github pages

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ body{font-family: Red Hat Text;}blockquote{border-color: #ea4335;}div[submit-suc
         <div class="row">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
 <!--Formbuilder Form-->
-<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Crl8s3W7nCbQ0mRwdQ8Vl9NRKfUsu0RwdwdQ2ALLQEpmbeuMwSfM8EAHryv4QWj0bvQvHU+sZfqJq4YzJViqb+SSamlbTW1jcjh6yX7haTfwstFynEuzPEtIIeKHUvIa.RbRyU/kdeSHvCNgWhHgVIHeDRyV0ugsjCmMgOM/aPIb0Ibrc6o3izXTXw/iCdxjrfjy8nSeGlrf8hZyZD6qJXUGrUn0eNsFOpUPz8prXvvR0lBcah349Lh/cXpz2iZ5w">
+<form method="POST" class="mbr-form" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="gTUbprwvgTPC4sH1f8MT4ezhQKLksztP7w7Url1vm198dIV/mHD0iUagg/XMSnoeYsNIO9Qvk0pXc+B0ScAglrlwOZV15J8uO6qz0NkIOzM9aelwMq6mUsqQhs5LLh2r.REdxZS2Yc3CMZLqgZSlbN4fx8w+vNHFrJbprX9ydV2d11VlYMKhaQMuPP+AjQ6ceIyyau043x7Jw1iav6xOJNQO8xORz6Euj4MxunhBVmW4mQeF0vIZzLUOXn1dWahGV">
 <div class="mbr-row">
 <div submit-success="" class="mbr-col-lg-12 mbr-col-md-12 mbr-col-sm-12">
 <template data-form-alert="" type="amp-mustache">Thanks for filling out the form! We will get back to you as soon as possible</template>
@@ -464,7 +464,7 @@ body{font-family: Red Hat Text;}blockquote{border-color: #ea4335;}div[submit-suc
 <h3 class="mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-bold mbr-pb-2 mbr-fonts-style mbr-fonts-style display-1">CONTACT US</h3>
 </div>
 <div class="mbr-col-lg-12">
-<p class="mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-pb-2 mbr-fonts-style display-5">We will get back to you as soon as possible.<br><br><strong>Gravitise Head Office - 696 Bourke Street, Melbourne<br>Telephone - <a href="tel:1300770997">1300 770 997</a></strong></p>
+<p class="mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-fonts-style mbr-pb-2 mbr-fonts-style display-5">We will get back to you as soon as possible.<br><br><strong>Gravitise Head Office -&nbsp;31 Queen St, Melbourne<br>Telephone - <a href="tel:1300770997">1300 770 997</a></strong></p>
 </div>
 <div data-for="form[data][0][1]" class="mbr-col-lg-6 mbr-col-sm-12 field">
 <input type="hidden" name="form[data][0][0]" value="first-name" id="form[data][0][0]-form1-d" data-form-field="">
